iceberg/postgres/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgres-ingress
  namespace: iceberg
spec:
  rules:
  - host: postgres.deplatform.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: postgres
            port:
              number: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: iceberg
spec:
  type: NodePort
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 32345
      name: postgres
  type: NodePort
  selector:
    app: postgres
